fix: Missing Modal & Alignment

--- a/Frontend/src/components/ModalStudent/ModalStudent.scss
+++ b/Frontend/src/components/ModalStudent/ModalStudent.scss
@@ -229,11 +229,13 @@
 }
 
 .closeModal {
+    display: flex;
     background-color: #ddd;
     color: #000;
-    font-weight: 500;
     align-self: flex-end;
     margin-right: 3.5%;
+    align-items: center;
+    text-align: center;
 }
 
 .addCourse{
